Fix libmagic dependency issue in GitHub Actions
- Add system dependency installation for Ubuntu, macOS, and Windows
- Add python-magic-bin dependency for Windows support
- Update both CI and release workflows
- Update poetry lock file

This fixes the ImportError: failed to find libmagic issue in GitHub Actions.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,23 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
+    - name: Install system dependencies (Ubuntu)
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libmagic1 libmagic-dev
+    
+    - name: Install system dependencies (macOS)
+      if: matrix.os == 'macos-latest'
+      run: |
+        brew install libmagic
+    
+    - name: Install system dependencies (Windows)
+      if: matrix.os == 'windows-latest'
+      run: |
+        # For Windows, python-magic-bin provides the required binaries
+        echo "Windows dependencies will be handled by python-magic-bin"
+    
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
