--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ keywords = ["replace", "text", "string", "recursive", "sed", "find-replace"]
 [tool.poetry.dependencies]
 python = "^3.10"
 python-magic = "^0.4.27"
+python-magic-bin = {version = "^0.4.14", markers = "sys_platform == 'win32'"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
