--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,19 @@ jobs:
         version: latest
         virtualenvs-create: true
         virtualenvs-in-project: true
+        installer-parallel: true
+        
+    - name: Add Poetry to PATH (Windows)
+      if: matrix.os == 'windows-latest'
+      run: |
+        echo "$env:APPDATA\Python\Scripts" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+        echo "$env:USERPROFILE\.local\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+      shell: pwsh
+      
+    - name: Verify Poetry installation
+      run: |
+        poetry --version
+        poetry config --list
         
     - name: Load cached venv
       id: cached-poetry-dependencies
