--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,8 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         
-    - name: Install Poetry
+    - name: Install Poetry (non-Windows)
+      if: matrix.os != 'windows-latest'
       uses: snok/install-poetry@v1
       with:
         version: latest
@@ -47,15 +48,18 @@ jobs:
         virtualenvs-in-project: true
         installer-parallel: true
         
-    - name: Add Poetry to PATH (Windows)
+    - name: Install Poetry (Windows)
       if: matrix.os == 'windows-latest'
       run: |
-        echo "$env:APPDATA\Python\Scripts" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-        echo "$env:USERPROFILE\.local\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+        pip install poetry
+        poetry --version
+        poetry config virtualenvs.create true
+        poetry config virtualenvs.in-project true
       shell: pwsh
       
     - name: Verify Poetry installation
       run: |
+        echo "Checking Poetry installation:"
         poetry --version
         poetry config --list
         
