Remove Windows support from CI/CD - Focus on Unix-like systems
- Remove Windows from CI matrix (ubuntu-latest, macos-latest only)
- Remove Windows-specific Poetry installation complexity
- Remove python-magic-bin dependency for Windows
- Simplify workflows by focusing on target platforms
- Update poetry lock file

zrep is primarily a Unix/Linux tool for developers, so Windows
support is not necessary and was causing CI complexity.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest]
         python-version: ['3.10', '3.11', '3.12']
         
     steps:
@@ -26,11 +26,6 @@ jobs:
       if: matrix.os == 'macos-latest'
       run: |
         brew install libmagic
-    
-    - name: Install system dependencies (Windows)
-      if: matrix.os == 'windows-latest'
-      run: |
-        echo "Windows dependencies will be handled by python-magic-bin"
     
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
