--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest]
         python-version: ['3.10', '3.11', '3.12']
         
     steps:
@@ -28,40 +28,18 @@ jobs:
       run: |
         brew install libmagic
     
-    - name: Install system dependencies (Windows)
-      if: matrix.os == 'windows-latest'
-      run: |
-        # For Windows, python-magic-bin provides the required binaries
-        echo "Windows dependencies will be handled by python-magic-bin"
-    
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
         
-    - name: Install Poetry (non-Windows)
-      if: matrix.os != 'windows-latest'
+    - name: Install Poetry
       uses: snok/install-poetry@v1
       with:
         version: latest
         virtualenvs-create: true
         virtualenvs-in-project: true
         installer-parallel: true
-        
-    - name: Install Poetry (Windows)
-      if: matrix.os == 'windows-latest'
-      run: |
-        pip install poetry
-        poetry --version
-        poetry config virtualenvs.create true
-        poetry config virtualenvs.in-project true
-      shell: pwsh
-      
-    - name: Verify Poetry installation
-      run: |
-        echo "Checking Poetry installation:"
-        poetry --version
-        poetry config --list
         
     - name: Load cached venv
       id: cached-poetry-dependencies
